Added deities, worlds, and calendar, and the guild of discovery. Added more to the campaign overview page.

--- a/_includes/character-popup.html
+++ b/_includes/character-popup.html
@@ -29,5 +29,5 @@ function hidePopup(id) {
 <a>{{ include.post.title }}</a>
 {% endif %}
 {% endif %}
-<span class="popuptext" id="{{ include.post.title }}">{% include character-wide.html data=include.post.char_data title=include.post.title %}</span>
+<span class="popuptext" id="{{ include.post.title }}" style="left: -150%;">{% include character-wide.html data=include.post.char_data title=include.post.title %}</span>
 </div>
