--- a/_includes/character-wide.html
+++ b/_includes/character-wide.html
@@ -1,7 +1,7 @@
 {% if include.data %}
 
 {% if include.title %}
-  <h3>{{ include.title }}</h3>
+  <h3 style="text-align: left; margin-left: 12.5px;">{{ include.title }}</h3>
   <div class="page__subtitle"></div>
 {% endif %}
 
