--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -166,3 +166,68 @@ search: false
   background-color: #1a1e25;
   border-radius: 0px 0px 8px 8px;
 }
+
+.dndblock {
+
+    background-image: url("http://localhost:4000/sen/assets/images/block-bg.png");
+    color: #000;
+    padding: 16px;
+
+    .gradient {
+        background: linear-gradient(10deg, #A73335, rgba(0,0,0,0));
+        height:5px;
+        margin:7px 0px;
+    }
+
+    .name {
+        font-size:225%;
+        font-family:Georgia, serif;
+        font-variant:small-caps;
+        font-weight:bold;
+        color:#A73335;
+    }
+
+    .description {
+        font-style:italic;    
+    }
+
+    .bold {
+        font-weight:bold;
+    }
+
+    .red {
+        color:#A73335;
+    }
+
+    table {
+        width:100%;
+        border:0px;
+        border-collapse:collapse;
+        color:#A73335;
+    }
+
+    th, td {
+        width:50px;
+        text-align:center;
+    }
+
+    .actions {
+        font-size:175%;
+        font-variant:small-caps;
+        margin:17px 0px 0px 0px;
+    }
+
+    .hr {
+        background: #A73335;
+        height:2px;
+    }
+
+    .attack {
+        margin:5px 0px;
+    }
+
+    .attackname {
+        font-weight:bold;
+        font-style:italic;
+    }
+}
