--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -169,7 +169,7 @@ search: false
 
 .dndblock {
 
-    background-image: url("http://localhost:4000/sen/assets/images/block-bg.png");
+    background-image: url("/sen/assets/images/block-bg.png");
     color: #000;
     padding: 16px;
 
