Added incident report on the astra archives, added rhinox and ursine stat blocks. Added 5e content section.

--- a/_includes/faction-index-list.html
+++ b/_includes/faction-index-list.html
@@ -15,7 +15,7 @@ blockquote
 {% assign postTitle = post.title | downcase %}
 {% unless postTitle contains "secret" %}
 {% if post.category contains include.category %}
-<div style="min-height: 256px; padding: 4px 16px 8px 16px;">
+<div style="min-height: 256px; padding: 4px 16px 8px 16px; overflow: hidden;">
 <a href="/sen{{ post.url }}"><h2>{{ post.title }}</h2></a>
 {% assign icon_path = site.url | append: site.baseurl | append: site.path_logo | append: post.faction.sort | append: ".png" %}
 {% if post.faction.sort %}
