keeping repo up to date with updates

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -158,7 +158,7 @@ search: false
 }
 
 .collapsible_content {
-  padding: 0 18px;
+  padding: 0 18px 8px;
   max-height: 0;
   overflow: hidden;
   margin-top: -8px;
