--- a/_includes/collapsible.html
+++ b/_includes/collapsible.html
@@ -27,10 +27,20 @@ function expand(id)
 
 </style>
 
-{% capture contentMethod %}expand('{{ include.post.url }}'){% endcapture %}
+{% capture urlContentMethod %}expand('{{ include.post.url }}'){% endcapture %}
+{% capture titleContentMethod %}expand('{{ include.title | slugify }}'){% endcapture %}
 
 {% if include.post %}
-<button class="collapsible" onclick="{{ contentMethod }}"><h2 id="{{ include.post.title | slugify }}">{{ include.post.title }}</h2></button><br>
+
+<button class="collapsible" onclick="{{ urlContentMethod }}"><h2 id="{{ include.post.title | slugify }}">{{ include.post.title }}</h2></button><br>
 <div class="collapsible_content" id="{{ include.post.url }}"><br>{{ include.post.excerpt }}
-<!-- <a href="/sen{{ include.post.url }}">Read More</a><br><br>--></div>
+<!-- <a href="/sen{{ include.post.url }}">Read More</a><br><br>-->
+</div>
+
+{% else %}
+
+<button class="collapsible" onclick="{{ titleContentMethod }}"><h2 id="{{ include.title | slugify | append: "title" }}">{{ include.title }}</h2></button><br>
+<div class="collapsible_content" id="{{ include.title | slugify }}"><br>{{ include.content | markdownify }}
+</div>
+
 {% endif %}
