--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,6 +47,11 @@ search: false
     padding-bottom: -10%;
 }
 
+.sidebar_italics{
+    font-size: $type-size-6;
+    font-style: italic;
+}
+
 .input-color {
     position: relative;
 }
