--- a/_includes/character-content.html
+++ b/_includes/character-content.html
@@ -1,9 +1,5 @@
 <h1 id="overview" style="visibility: hidden; margin: 0px; padding: 0px;">Overview</h1>
 
-{{ page.blurb }}
-
-<!--more-->
-
 <h2 id="background">Background</h2>
 
 {% for paragraph in page.paragraphs %}
@@ -15,21 +11,21 @@
 {% endif %}
 {% endfor %}
 
-{% if page.faction.sort-role or page.faction.given-role %}
+{% if page.faction.sort-role and page.faction.sort %}
 <h3 id="role-in-the-family">Role in the {{ page.faction.sort }}s</h3>
 {% if page.faction.sort-role contains "TODO" %}
 <div class="todo">{{ page.faction.sort }} paragraph.</div>
 {% else %}
 {{ page.faction.sort-role }}
 {% endif %}
+{% endif %}
 
-{% if page.faction.sort != page.faction.given and page.faction.given-role %}
+{% if page.faction.given-role and page.faction.given %}
 <h3 id="role-in-the-family">Role in the {{ page.faction.given }}s</h3>
 {% if page.faction.given-role contains "TODO" %}
 <div class="todo">{{ page.faction.given }} paragraph.</div>
 {% else %}
 {{ page.faction.given-role }}
-{% endif %}
 {% endif %}
 {% endif %}
 
